--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 version: '3.3'
 services:
-    toeverything:
+    affine:
+        restart: always
         image: 'ghcr.io/toeverything/affine:nightly-server-latest'
         ports:
-            - '3200:3000'
+            - '172.17.0.1:3200:3000'
+        volumes:
+            - ./data:/app/data
