--- a/tests/docker-compose.yaml
+++ b/tests/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.3"
 services:
   affine:
     restart: always
-    image: "ghcr.io/toeverything/affine-self-hosted:${SOFTWARE_VERSION_TAG}"
+    image: "elestio4test/affine:${SOFTWARE_VERSION_TAG}"
     ports:
       - "172.17.0.1:3200:3000"
     volumes:
