--- a/elestio.yml
+++ b/elestio.yml
@@ -2,7 +2,7 @@ ports:
   - protocol: "HTTPS"
     targetProtocol: "HTTP"
     listeningPort: "443"
-    targetPort: "3200"
+    targetPort: "3010"
     targetIP: "172.17.0.1"
     public: true
     path: "/"
@@ -11,10 +11,19 @@ ports:
     password: "random_password"
 environments:
   - key: "SOFTWARE_VERSION_TAG"
-    value: "latest"
+    value: "stable"
   - key: ADMIN_PASSWORD
     value: "random_password"
-
+  - key: "ADMIN_EMAIL"
+    value: "[EMAIL]"
+  - key: "MAILER_HOST"
+    value: "172.17.0.1" 
+  - key: "MAILER_PORT"
+    value: "25"    
+  - key: "MAILER_SENDER"
+    value: "[DOMAIN]@vm.elestio.app"
+  - key: "DOMAIN"
+    value: "[CI_CD_DOMAIN]"
 config:
   runTime: "dockerCompose"
   version: ""
